--- a/ultralytics/cfg/models/v8/rohith.yaml
+++ b/ultralytics/cfg/models/v8/rohith.yaml
@@ -21,20 +21,31 @@ backbone:
 # Neck + Head (Standard FPN)
 # ----------------------
 head:
-  # Reduce channels to 128 for all three layers C3, C4, C5
-  - [5, 1, Conv, [128, 1, 1]]          # 12: C3 reduced → p3
-  - [7, 1, Conv, [128, 1, 1]]          # 13: C4 reduced → p4
-  - [11, 1, Conv, [128, 1, 1]]         # 14: C5 reduced → p5
-
-  # Upsample p5 and concat with p4
-  - [14, 1, nn.Upsample, [None, 2, "nearest"]] # 15: upsample p5
-  - [[13, 15], 1, Concat, [1]]         # 16: concat p4 and upsampled p5
-  - [-1, 1, Conv, [128, 3, 1]]         # 17: fused p4
-
-  # Upsample fused p4 and concat with p3
-  - [17, 1, nn.Upsample, [None, 2, "nearest"]] # 18: upsample fused p4
-  - [[12, 18], 1, Concat, [1]]         # 19: concat p3 and upsampled p4
-  - [-1, 1, Conv, [128, 3, 1]]         # 20: fused p3
-
-  # Final Detect layer using p3 (40×40), p4 (20×20), p5 (10×10)
-  - [[20, 17, 14], 1, Detect, [nc]]    # 21: detect heads on P3, P4, P5
+  # PAN-FPN (FPN2) using C2f blocks
+  # C3 = 5, C4 = 7, C5 = 11
+  
+  # Reduce channels
+  - [11, 1, Conv, [512, 1, 1]]       # 12: P5
+  - [7, 1, Conv, [256, 1, 1]]        # 13: P4
+  - [5, 1, Conv, [128, 1, 1]]        # 14: P3
+  
+  # Top-down path
+  - [12, 1, nn.Upsample, [None, 2, "nearest"]]  # 15
+  - [[13, 15], 1, Concat, [1]]                  # 16
+  - [-1, 3, C2f, [256]]                         # 17: Fused P4
+  
+  - [17, 1, nn.Upsample, [None, 2, "nearest"]]  # 18
+  - [[14, 18], 1, Concat, [1]]                  # 19
+  - [-1, 3, C2f, [128]]                         # 20: Fused P3
+  
+  # Bottom-up path
+  - [20, 1, Conv, [128, 3, 2]]                  # 21
+  - [[21, 17], 1, Concat, [1]]                  # 22
+  - [-1, 3, C2f, [256]]                         # 23: Fused P4
+  
+  - [23, 1, Conv, [256, 3, 2]]                  # 24
+  - [[24, 12], 1, Concat, [1]]                  # 25
+  - [-1, 3, C2f, [512]]                         # 26: Fused P5
+  
+  # Detection heads on P3, P4, P5
+  - [[20, 23, 26], 1, Detect, [nc]]             # 27
