--- a/ultralytics/cfg/models/v8/yolov8_simple_FPN.yaml
+++ b/ultralytics/cfg/models/v8/yolov8_simple_FPN.yaml
@@ -2,6 +2,8 @@
 
 # Parameters
 nc: 80  # number of classes
+# Add this line at the top
+ch: [3]  # input image has 3 channels
 scales:
   n: [0.33, 0.25, 1024]
   s: [0.33, 0.50, 1024]
