--- a/ultralytics/cfg/models/v8/yolov8_simple_FPN.yaml
+++ b/ultralytics/cfg/models/v8/yolov8_simple_FPN.yaml
@@ -1,41 +1,35 @@
-# Ultralytics YOLOv8 with standard FPN neck
+nc: 3
+# ch: [3]
 
-# Parameters
-nc: 80  # number of classes
-# Add this line at the top
-ch: [3]  # input image has 3 channels
-scales:
-  n: [0.33, 0.25, 1024]
-  s: [0.33, 0.50, 1024]
-  m: [0.67, 0.75, 768]
-  l: [1.00, 1.00, 512]
-  x: [1.00, 1.25, 512]
-
-# Backbone (YOLOv8n backbone)
+# ----------------------
+# Backbone (YOLOv8n-style)
+# ----------------------
 backbone:
-  - [-1, 1, Conv, [64, 3, 2]]       # 0-P1/2
-  - [-1, 1, Conv, [128, 3, 2]]      # 1-P2/4
-  - [-1, 3, C2f, [128, True]]
-  - [-1, 1, Conv, [256, 3, 2]]      # 3-P3/8
-  - [-1, 6, C2f, [256, True]]       # 5: C3
-  - [-1, 1, Conv, [512, 3, 2]]      # 6
-  - [-1, 6, C2f, [512, True]]       # 7: C4
-  - [-1, 1, Conv, [1024, 3, 2]]     # 8
-  - [-1, 3, C2f, [1024, True]]      # 9
-  - [-1, 1, SPPF, [1024, 5]]        # 10: C5
+  - [-1, 1, Conv, [64, 3, 2]]          # 0: P1/2
+  - [-1, 1, Conv, [128, 3, 2]]         # 1: P2/4
+  - [-1, 3, C2f, [128, True]]          # 2
+  - [-1, 1, Conv, [256, 3, 2]]         # 3: P3/8
+  - [-1, 6, C2f, [256, True]]          # 4 → C3
+  - [-1, 1, Conv, [512, 3, 2]]         # 5: P4/16
+  - [-1, 6, C2f, [512, True]]          # 6 → C4
+  - [-1, 1, Conv, [1024, 3, 2]]        # 7: P5/32
+  - [-1, 3, C2f, [1024, True]]         # 8
+  - [-1, 1, SPPF, [1024, 5]]           # 9 → C5
 
-# Neck + Head (Simple FPN)
+# ----------------------
+# Neck + Head (Standard FPN)
+# ----------------------
 head:
-  - [5, 1, Conv, [128, 1, 1]]          # 11: reduce C3 → p3
-  - [7, 1, Conv, [128, 1, 1]]          # 12: reduce C4 → p4
-  - [10, 1, Conv, [128, 1, 1]]         # 13: reduce C5 → p5
+  - [4, 1, Conv, [256, 1, 1]]          # 10: C3 reduced → P3
+  - [6, 1, Conv, [256, 1, 1]]          # 11: C4 reduced → P4
+  - [9, 1, Conv, [256, 1, 1]]          # 12: C5 reduced → P5
 
-  - [13, 1, nn.Upsample, [None, 2, "nearest"]]  # 14: upsample p5
-  - [[12, 14], 1, Concat, [1]]         # 15: concat p4 and upsampled p5
-  - [-1, 1, Conv, [128, 3, 1]]         # 16: fused p4
+  - [12, 1, nn.Upsample, [None, 2, "nearest"]]  # 13: upsample P5
+  - [[11, 13], 1, Concat, [1]]         # 14: fuse P4 + upP5
+  - [-1, 1, C2f, [256]]                # 15: fused P4
 
-  - [16, 1, nn.Upsample, [None, 2, "nearest"]]  # 17: upsample fused p4
-  - [[11, 17], 1, Concat, [1]]         # 18: concat p3 and upsampled p4
-  - [-1, 1, Conv, [128, 3, 1]]         # 19: fused p3
+  - [15, 1, nn.Upsample, [None, 2, "nearest"]]  # 16: upsample fused P4
+  - [[10, 16], 1, Concat, [1]]         # 17: fuse P3 + upP4
+  - [-1, 1, C2f, [256]]                # 18: fused P3
 
-  - [[19, 16, 13], 1, Detect, [nc]]    # 20: Detect from P3, P4, P5
+  - [[18, 15, 12], 1, Detect, [nc]]    # 19: Detect heads on P3, P4, P5
