--- a/ultralytics/cfg/models/v8/custom_combined_neck.yaml
+++ b/ultralytics/cfg/models/v8/custom_combined_neck.yaml
@@ -1,31 +1,52 @@
-# Parameters
-nc: 3  # number of classes
-depth_multiple: 1.0
-width_multiple: 1.0
+# Custom backbone + detection head with FC-style fusion and multi-scale heads
 
-# Backbone
+# Define number of classes
+nc: 3  # RBC, WBC, Platelets
+
+# Input channels
+ch: [3]
+
 backbone:
-  # Stem + Stages
-  - [-1, 1, DWSConv, [32, 3, 2]]        # 0: Stem (640 → 320)
-  - [-1, 1, DWSConv, [48, 3, 2]]        # 1: Stage 1 (320 → 160)
-  - [-1, 1, DWSConv, [64, 3, 2]]        # 2: Stage 2 (160 → 80)
-  - [-1, 1, SE, [64]]                   # 3
-  - [-2, 1, DWSConv, [128, 3, 2]]       # 4: Stage 3 (80 → 40)
-  - [-1, 1, SE, [128]]                  # 5 → C3
-  - [-1, 1, CondConv, [256, 3, 2]]      # 6: Stage 4 (40 → 20)
-  - [-1, 1, SE, [256]]                  # 7 → C4
-  - [-1, 1, DeformableConv, [512, 3, 2]]# 8: Stage 5 (20 → 10)
-  - [-1, 1, CBAM, [512]]                # 9 → C5
-  - [-1, 1, DeformableConv, [512, 3, 1]]# 10: Stage 6 (10 → 10)
-  - [-1, 1, CBAM, [512]]                # 11
+  # Stem + Stages (DWS, SE, CondConv, etc.)
+  - [-1, 1, DWSConv, [32, 3, 2]]         # 0: Stem (640 → 320)
+  - [-1, 1, DWSConv, [48, 3, 2]]         # 1: Stage 1 (320 → 160)
+  - [-1, 1, DWSConv, [64, 3, 2]]         # 2: Stage 2 (160 → 80)
+  - [-1, 1, SE, [64]]                    # 3
+  - [-2, 1, DWSConv, [128, 3, 2]]        # 4: Stage 3 (80 → 40)
+  - [-1, 1, SE, [128]]                   # 5 → C3
+  - [-1, 1, CondConv, [256, 3, 2]]       # 6: Stage 4 (40 → 20)
+  - [-1, 1, SE, [256]]                   # 7 → C4
+  - [-1, 1, DeformableConv, [512, 3, 2]] # 8: Stage 5 (20 → 10)
+  - [-1, 1, CBAM, [512]]                 # 9
+  - [-1, 1, DeformableConv, [512, 3, 1]] # 10: Stage 6 (10 → 10)
+  - [-1, 1, CBAM, [512]]                 # 11 → C5
 
-# Neck + Head Fusion via FC-like layer
 head:
-  - [5, 1, Conv, [256, 1, 1]]     # 12: proj_C3
-  - [7, 1, Conv, [256, 1, 1]]     # 13: proj_C4
-  - [9, 1, Conv, [256, 1, 1]]     # 14: proj_C5
-  - [[12,13,14], 1, Concat, [1]]  # 15: concat_C345
-  - [15, 1, Conv, [256, 1, 1]]    # 16: fusion_small
-  - [15, 1, Conv, [256, 1, 1]]    # 17: fusion_medium
-  - [15, 1, Conv, [256, 1, 1]]    # 18: fusion_large
-  - [[16,17,18], 1, Detect, [nc]] # 19: Detect
+  # -------- FC-style fusion with multi-scale outputs --------
+  # Project C3, C4, C5 to common channels
+  - [5, 1, Conv, [256, 1, 1]]   # 12: P3
+  - [7, 1, Conv, [256, 1, 1]]   # 13: P4
+  - [11, 1, Conv, [256, 1, 1]]  # 14: P5
+
+  # Upsample to match P3 (1/8) and concat for small head
+  - [13, 1, Upsample, [None, 2]]     # 15
+  - [14, 1, Upsample, [None, 4]]     # 16
+  - [[12,15,16], 1, Concat, [1]]     # 17
+  - [-1, 1, Conv, [256, 3, 1]]       # 18
+
+  # Mix for medium head (P4 resolution → 1/16)
+  - [12, 1, Downsample, [2]]         # 19
+  - [14, 1, Upsample, [None, 2]]     # 20
+  - [[19,13,20], 1, Concat, [1]]     # 21
+  - [-1, 1, Conv, [256, 3, 1]]       # 22
+
+  # Mix for large head (P5 resolution → 1/32)
+  - [12, 1, Downsample, [4]]         # 23
+  - [13, 1, Downsample, [2]]         # 24
+  - [[23,24,14], 1, Concat, [1]]     # 25
+  - [-1, 1, Conv, [256, 3, 1]]       # 26
+
+  # Detect heads
+  - [18, 1, Detect, [nc]]   # Detect at 1/8
+  - [22, 1, Detect, [nc]]   # Detect at 1/16
+  - [26, 1, Detect, [nc]]   # Detect at 1/32
