--- a/ultralytics/cfg/models/v8/custom_combined_neck.yaml
+++ b/ultralytics/cfg/models/v8/custom_combined_neck.yaml
@@ -22,31 +22,20 @@ backbone:
   - [-1, 1, CBAM, [512]]                 # 11 → C5
 
 head:
-  # -------- FC-style fusion with multi-scale outputs --------
-  # Project C3, C4, C5 to common channels
-  - [5, 1, Conv, [256, 1, 1]]   # 12: P3
-  - [7, 1, Conv, [256, 1, 1]]   # 13: P4
-  - [11, 1, Conv, [256, 1, 1]]  # 14: P5
+  # Upsample and fuse for small-scale (P3/8)
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]     # Upsample P4 → match P3 size
+  - [[-1, 4], 1, Concat, [1]]                      # Combine with C3
+  - [-1, 3, C2f, [256]]                            # Feature fusion → P3 (small objects)
 
-  # Upsample to match P3 (1/8) and concat for small head
-  - [13, 1, Upsample, [None, 2]]     # 15
-  - [14, 1, Upsample, [None, 4]]     # 16
-  - [[12,15,16], 1, Concat, [1]]     # 17
-  - [-1, 1, Conv, [256, 3, 1]]       # 18
+  # Downsample and fuse for medium-scale (P4/16)
+  - [-1, 1, Conv, [256, 3, 2]]                     # Downsample P3
+  - [[-1, 5], 1, Concat, [1]]                      # Combine with C4
+  - [-1, 3, C2f, [512]]                            # Feature fusion → P4 (medium objects)
 
-  # Mix for medium head (P4 resolution → 1/16)
-  - [12, 1, Downsample, [2]]         # 19
-  - [14, 1, Upsample, [None, 2]]     # 20
-  - [[19,13,20], 1, Concat, [1]]     # 21
-  - [-1, 1, Conv, [256, 3, 1]]       # 22
+  # Downsample and fuse for large-scale (P5/32)
+  - [-1, 1, Conv, [512, 3, 2]]                     # Downsample P4
+  - [[-1, 7], 1, Concat, [1]]                      # Combine with C5
+  - [-1, 3, C2f, [1024]]                           # Feature fusion → P5 (large objects)
 
-  # Mix for large head (P5 resolution → 1/32)
-  - [12, 1, Downsample, [4]]         # 23
-  - [13, 1, Downsample, [2]]         # 24
-  - [[23,24,14], 1, Concat, [1]]     # 25
-  - [-1, 1, Conv, [256, 3, 1]]       # 26
-
-  # Detect heads
-  - [18, 1, Detect, [nc]]   # Detect at 1/8
-  - [22, 1, Detect, [nc]]   # Detect at 1/16
-  - [26, 1, Detect, [nc]]   # Detect at 1/32
+  # Detect on three heads: P3, P4, P5
+  - [[2, 5, 8], 1, Detect, [nc]]                   # Final detection head
