--- a/ultralytics/cfg/models/v8/custom_combined_neck.yaml
+++ b/ultralytics/cfg/models/v8/custom_combined_neck.yaml
@@ -16,21 +16,31 @@ backbone:
   - [-1, 1, CBAM, [512]]                 # 11: C5
 
 head:
-  - [11, 1, Conv, [512, 1, 1]]                 # 12: reduce channels (C5)
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 13: upsample to match C4
-  - [[-1, 7], 1, Concat, [1]]                  # 14: C5 + C4
-  - [-1, 3, C2f, [512]]                        # 15: P4
+  # -------- FC-style fusion with multi-scale outputs --------
+  # Project C3, C4, C5 to common channels
+  - [5, 1, Conv, [256, 1, 1]]   # 12: P3
+  - [7, 1, Conv, [256, 1, 1]]   # 13: P4
+  - [11, 1, Conv, [256, 1, 1]]  # 14: P5
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 16: upsample to match C3
-  - [[-1, 5], 1, Concat, [1]]                  # 17: P4 + C3
-  - [-1, 3, C2f, [256]]                        # 18: P3
+  # Upsample to match P3 (1/8) and concat for small head
+  - [13, 1, Upsample, [None, 2]]     # 15
+  - [14, 1, Upsample, [None, 4]]     # 16
+  - [[12,15,16], 1, Concat, [1]]     # 17
+  - [-1, 1, Conv, [256, 3, 1]]       # 18
 
-  - [-1, 1, Conv, [256, 3, 2]]                # 19: downsample P3
-  - [[-1, 15], 1, Concat, [1]]                # 20: P3 + P4
-  - [-1, 3, C2f, [512]]                        # 21: P4 (again)
+  # Mix for medium head (P4 resolution → 1/16)
+  - [12, 1, Downsample, [2]]         # 19
+  - [14, 1, Upsample, [None, 2]]     # 20
+  - [[19,13,20], 1, Concat, [1]]     # 21
+  - [-1, 1, Conv, [256, 3, 1]]       # 22
 
-  - [-1, 1, Conv, [512, 3, 2]]                # 22: downsample P4
-  - [[-1, 12], 1, Concat, [1]]                # 23: P4 + P5
-  - [-1, 3, C2f, [1024]]                       # 24: P5 (again)
+  # Mix for large head (P5 resolution → 1/32)Add commentMore actions
+  - [12, 1, Downsample, [4]]         # 23
+  - [13, 1, Downsample, [2]]         # 24
+  - [[23,24,14], 1, Concat, [1]]     # 25
+  - [-1, 1, Conv, [256, 3, 1]]       # 26
 
-  - [[18, 21, 24], 1, Detect, [nc]]           # 25: Detect heads on P3, P4, P5
+  # Detect heads
+  - [18, 1, Detect, [nc]]   # Detect at 1/8
+  - [22, 1, Detect, [nc]]   # Detect at 1/16
+  - [26, 1, Detect, [nc]]   # Detect at 1/32
