--- a/ultralytics/cfg/models/v8/custom_combined_neck.yaml
+++ b/ultralytics/cfg/models/v8/custom_combined_neck.yaml
@@ -17,29 +17,29 @@ backbone:
 
 head:
   # Project C3, C4, C5 to common channels
-  - [[5], 1, Conv, [256, 1, 1]]        # 12: P3
-  - [[7], 1, Conv, [256, 1, 1]]        # 13: P4
-  - [[11], 1, Conv, [256, 1, 1]]       # 14: P5
+  - [5, 1, Conv, [256, 1, 1]]        # 12: P3
+  - [7, 1, Conv, [256, 1, 1]]        # 13: P4
+  - [11, 1, Conv, [256, 1, 1]]       # 14: P5
 
   # Upsample to match P3 (1/8) and concat for small head
-  - [[13], 1, nn.Upsample, [None, 2, "nearest"]]    # 15: Upsample x2
-  - [[14], 1, nn.Upsample, [None, 4, "nearest"]]    # 16: Upsample x4
-  - [[12,15,16], 1, Concat, [1]]                      # 17
-  - [[-1], 1, Conv, [256, 3, 1]]                      # 18
+  - [13, 1, nn.Upsample, [None, 2, "nearest"]]    # 15: Upsample x2
+  - [14, 1, nn.Upsample, [None, 4, "nearest"]]    # 16: Upsample x4
+  - [[12,15,16], 1, Concat, [1]]                   # 17
+  - [-1, 1, Conv, [256, 3, 1]]                      # 18
 
   # Mix for medium head (P4 resolution → 1/16)
-  - [[12], 1, Conv, [256, 3, 2]]                      # 19: Downsample x2
-  - [[14], 1, nn.Upsample, [None, 2, "nearest"]]      # 20: Upsample x2
-  - [[19,13,20], 1, Concat, [1]]                       # 21
-  - [[-1], 1, Conv, [256, 3, 1]]                       # 22
+  - [12, 1, Conv, [256, 3, 2]]                      # 19: Downsample x2
+  - [14, 1, nn.Upsample, [None, 2, "nearest"]]      # 20: Upsample x2
+  - [[19,13,20], 1, Concat, [1]]                     # 21
+  - [-1, 1, Conv, [256, 3, 1]]                       # 22
 
   # Mix for large head (P5 resolution → 1/32)
-  - [[12], 1, Conv, [256, 3, 4]]                       # 23: Downsample x4
-  - [[13], 1, Conv, [256, 3, 2]]                       # 24: Downsample x2
-  - [[23,24,14], 1, Concat, [1]]                       # 25
-  - [[-1], 1, Conv, [256, 3, 1]]                       # 26
+  - [12, 1, Conv, [256, 3, 4]]                       # 23: Downsample x4
+  - [13, 1, Conv, [256, 3, 2]]                       # 24: Downsample x2
+  - [[23,24,14], 1, Concat, [1]]                     # 25
+  - [-1, 1, Conv, [256, 3, 1]]                       # 26
 
   # Detect heads
-  - [[18], 1, Detect, [nc]]                             # Detect at 1/8
-  - [[22], 1, Detect, [nc]]                             # Detect at 1/16
-  - [[26], 1, Detect, [nc]]                             # Detect at 1/32
+  - [18, 1, Detect, [nc]]                             # Detect at 1/8
+  - [22, 1, Detect, [nc]]                             # Detect at 1/16
+  - [26, 1, Detect, [nc]]                             # Detect at 1/32
