--- a/ultralytics/cfg/models/v8/custom_no_FPN.yaml
+++ b/ultralytics/cfg/models/v8/custom_no_FPN.yaml
@@ -22,23 +22,24 @@ backbone:
 # ----------------------
 head:
   # Upsample and concat features
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample from last layer by 2
-  - [[-1, 6], 1, Concat, [1]]                   # Concat with backbone layer 6 (P4)
-  - [-1, 3, C2f, [512]]                         # Process concat output
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  # 12: Upsample from last layer by 2
+  - [[-1, 6], 1, Concat, [1]]                   # 13: Concat with backbone layer 6 (P4)
+  - [-1, 3, C2f, [512]]                         # 14: Process concat output
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample again
-  - [[-1, 4], 1, Concat, [1]]                   # Concat with backbone layer 4 (P3)
-  - [-1, 3, C2f, [256]]                         # Process concat output (small scale head)
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  # 15: Upsample again
+  - [[-1, 4], 1, Concat, [1]]                   # 16: Concat with backbone layer 4 (P3)
+  - [-1, 3, C2f, [256]]                         # 17: Process concat output (small scale head)
 
   # Downsample and concat for medium scale
-  - [-1, 1, Conv, [256, 3, 2]]                  # Downsample
-  - [[-1, 12], 1, Concat, [1]]                  # Concat with previous layer 12
-  - [-1, 3, C2f, [512]]                         # Process concat output (medium scale head)
+  - [-1, 1, Conv, [256, 3, 2]]                  # 18: Downsample
+  - [[-1, 12], 1, Concat, [1]]                  # 19: Concat with previous layer 12
+  - [-1, 3, C2f, [512]]                         # 20: Process concat output (medium scale head)
 
   # Downsample and concat for large scale
-  - [-1, 1, Conv, [512, 3, 2]]                  # Downsample
-  - [[-1, 9], 1, Concat, [1]]                   # Concat with previous layer 9
-  - [-1, 3, C2f, [1024]]                        # Process concat output (large scale head)
+  - [-1, 1, Conv, [512, 3, 2]]                  # 21: Downsample
+  - [[-1, 9], 1, Concat, [1]]                   # 22: Concat with previous layer 9
+  - [-1, 3, C2f, [1024]]                        # 23: Process concat output (large scale head)
 
   # Final detection heads on P3, P4, P5
-  - [[15, 18, 21], 1, Detect, [nc]]
+  - [[14, 17, 20], 1, Detect, [nc]]             # 24: Detect on outputs of C2f blocks
+
