--- a/ultralytics/cfg/models/v8/custom_combined_neck.yaml
+++ b/ultralytics/cfg/models/v8/custom_combined_neck.yaml
@@ -15,31 +15,30 @@ backbone:
   - [-1, 1, DeformableConv, [512, 3, 1]] # 10: Stage 6
   - [-1, 1, CBAM, [512]]                 # 11: C5
 
-head:
-  # Project C3, C4, C5 to common channels
-  - [5, 1, Conv, [256, 1, 1]]        # 12: P3
-  - [7, 1, Conv, [256, 1, 1]]        # 13: P4
-  - [11, 1, Conv, [256, 1, 1]]       # 14: P5
+# ----------------------
+# Custom Neck (Optimized for Your Backbone)
+# ----------------------
+head :
+  # ---- Stage 1: Channel Reduction ----
+  # Inputs: C3 (40x40,128), C4 (20x20,256), C5 (10x10,512)
+  - [5, 1, DWSConv, [128, 1, 1]]       # 12: C3 → 128 ch (P3)
+  - [7, 1, DWSConv, [128, 1, 1]]       # 13: C4 → 128 ch (P4)
+  - [11, 1, DWSConv, [128, 1, 1]]      # 14: C5 → 128 ch (P5)
 
-  # Upsample to match P3 (1/8) and concat for small head
-  - [13, 1, nn.Upsample, [None, 2, "nearest"]]    # 15: Upsample x2
-  - [14, 1, nn.Upsample, [None, 4, "nearest"]]    # 16: Upsample x4
-  - [[12,15,16], 1, Concat, [1]]                   # 17
-  - [-1, 1, Conv, [256, 3, 1]]                      # 18
+  # ---- Stage 2: Bottom-Up Mixing (C5 → C4 → C3) ----
+  # Mix C5 into C4 (no upsample! Strided conv instead)
+  - [14, 1, DWSConv, [128, 3, 2]]      # 15: C5 (10x10→20x20, 128 ch)
+  - [[13, 15], 1, nn.Add, []]           # 16: C4 + C5 → Mixed P4
 
-  # Mix for medium head (P4 resolution → 1/16)
-  - [12, 1, Conv, [256, 3, 2]]                      # 19: Downsample x2
-  - [14, 1, nn.Upsample, [None, 2, "nearest"]]      # 20: Upsample x2
-  - [[19,13,20], 1, Concat, [1]]                     # 21
-  - [-1, 1, Conv, [256, 3, 1]]                       # 22
+  # Mix result into C3 (again, strided conv)
+  - [16, 1, DWSConv, [128, 3, 2]]      # 17: Mixed P4 (20x20→40x40, 128 ch)
+  - [[12, 17], 1, nn.Add, []]           # 18: C3 + Mixed P4 → Final P3
 
-  # Mix for large head (P5 resolution → 1/32)
-  - [12, 1, Conv, [256, 3, 4]]                       # 23: Downsample x4
-  - [13, 1, Conv, [256, 3, 2]]                       # 24: Downsample x2
-  - [[23,24,14], 1, Concat, [1]]                     # 25
-  - [-1, 1, Conv, [256, 3, 1]]                       # 26
+  # ---- Stage 3: Top-Down Refinement ----
+  # Optional: Refine P4 by mixing P3 back down (lightweight)
+  - [18, 1, DWSConv, [128, 3, 2]]      # 19: P3 (40x40→20x20, 128 ch)
+  - [[16, 19], 1, nn.Add, []]           # 20: Mixed P4 + P3 → Final P4
 
-  # Detect heads
-  - [18, 1, Detect, [nc]]                             # Detect at 1/8
-  - [22, 1, Detect, [nc]]                             # Detect at 1/16
-  - [26, 1, Detect, [nc]]                             # Detect at 1/32
+  # Outputs: P3 (40x40,128), P4 (20x20,128), P5 (10x10,128)
+  - [[18, 20, 14], 1, Detect, [nc]]    # 21: Detect layer                      # 26
+
