--- a/ultralytics/cfg/models/v8/custom_combined_neck.yaml
+++ b/ultralytics/cfg/models/v8/custom_combined_neck.yaml
@@ -18,27 +18,19 @@ backbone:
 # ----------------------
 # Custom Neck (Optimized for Your Backbone)
 # ----------------------
-head :
-  # ---- Stage 1: Channel Reduction ----
-  # Inputs: C3 (40x40,128), C4 (20x20,256), C5 (10x10,512)
+head:
   - [5, 1, DWSConv, [128, 1, 1]]       # 12: C3 → 128 ch (P3)
   - [7, 1, DWSConv, [128, 1, 1]]       # 13: C4 → 128 ch (P4)
   - [11, 1, DWSConv, [128, 1, 1]]      # 14: C5 → 128 ch (P5)
 
-  # ---- Stage 2: Bottom-Up Mixing (C5 → C4 → C3) ----
-  # Mix C5 into C4 (no upsample! Strided conv instead)
-  - [14, 1, DWSConv, [128, 3, 2]]      # 15: C5 (10x10→20x20, 128 ch)
-  - [[13, 15], 1, Add, []]           # 16: C4 + C5 → Mixed P4
+  - [14, 1, DWSConv, [128, 3, 2]]      # 15: C5 → up to 20x20
+  - [[13, 15], 1, AddBlock, []]        # 16: C4 + upC5
 
-  # Mix result into C3 (again, strided conv)
-  - [16, 1, DWSConv, [128, 3, 2]]      # 17: Mixed P4 (20x20→40x40, 128 ch)
-  - [[12, 17], 1, Add, []]           # 18: C3 + Mixed P4 → Final P3
+  - [16, 1, DWSConv, [128, 3, 2]]      # 17: Mix into 40x40
+  - [[12, 17], 1, AddBlock, []]        # 18: C3 + Mixed P4
 
-  # ---- Stage 3: Top-Down Refinement ----
-  # Optional: Refine P4 by mixing P3 back down (lightweight)
-  - [18, 1, DWSConv, [128, 3, 2]]      # 19: P3 (40x40→20x20, 128 ch)
-  - [[16, 19], 1, Add, []]           # 20: Mixed P4 + P3 → Final P4
+  - [18, 1, DWSConv, [128, 3, 2]]      # 19: P3 downsampled
+  - [[16, 19], 1, AddBlock, []]        # 20: Mixed P4 + P3
 
-  # Outputs: P3 (40x40,128), P4 (20x20,128), P5 (10x10,128)
-  - [[18, 20, 14], 1, Detect, [nc]]    # 21: Detect layer
+  - [[18, 20, 14], 1, Detect, [nc]]    # 21: Detect
 
