--- a/ultralytics/cfg/models/v8/efficient_custom.yaml
+++ b/ultralytics/cfg/models/v8/efficient_custom.yaml
@@ -14,8 +14,9 @@ backbone:
   - [-1, 1, SE, [256]]                   # 7 → C4
   - [-1, 1, DWSConv, [512, 3, 2]] # 8: Stage 5 (20 → 10)
   - [-1, 1, CBAM, [512]]                 # 9
-  - [-1, 1, DWSConv, [512, 3, 1]] # 10: Stage 6 (10 → 10)
-  - [-1, 1, CBAM, [512]]                 # 11 → C5
+  # Stage 6
+  - [-1, 1, DWSConv, [512, 3, 1]]       # 10
+  - [-1, 1, MobileViT, [512, 2, 4]]     # 11 → C5
 
 # ----------------------
 # Neck + Head (Standard FPN)
