--- a/ultralytics/cfg/models/v8/efficient_custom.yaml
+++ b/ultralytics/cfg/models/v8/efficient_custom.yaml
@@ -16,7 +16,7 @@ backbone:
   - [-1, 1, CBAM, [512]]                 # 9
   # Stage 6
   - [-1, 1, DWSConv, [512, 3, 1]]       # 10
-  - [-1, 1, MobileViT, [512, 2, 2]]     # 11 → C5
+  - [-1, 1, CBAM, [512]]     # 11 → C5
 
 # ----------------------
 # Neck + Head (Standard FPN)
