--- a/ultralytics/cfg/models/v8/custom_no_FPN.yaml
+++ b/ultralytics/cfg/models/v8/custom_no_FPN.yaml
@@ -12,8 +12,8 @@ backbone:
   - [-1, 1, CondConv, [256, 3, 2]]      # 6(C4): Stage 4 (40 → 20)
   # - [-1, 1, SE, [256]]                  # 7 → C4
   - [-1, 1, DWSConv, [512, 3, 2]]       # 7: Stage 5 (20 → 10)
-  - [-1, 1, CBAM, [512]]                # 8
-  - [-1, 1, DWSConv, [512, 3, 1]]       # 9 -> C5
+  # - [-1, 1, CBAM, [512]]                # 8
+  - [-1, 1, DWSConv, [512, 3, 1]]       # 8 -> C5
   # - [-1, 1, CBAM, [512]]                # 11 → C5
 
 # ----------------------
@@ -21,19 +21,19 @@ backbone:
 # ----------------------
 head:
   # Reduce channels to 128 for all three layers C3, C4, C5
-  - [5, 1, Conv, [128, 1, 1]]          # 10: C3 reduced → p3
-  - [6, 1, Conv, [128, 1, 1]]          # 11: C4 reduced → p4
-  - [9, 1, Conv, [128, 1, 1]]         # 12: C5 reduced → p5
+  - [5, 1, Conv, [128, 1, 1]]          # 9: C3 reduced → p3
+  - [6, 1, Conv, [128, 1, 1]]          # 10: C4 reduced → p4
+  - [8, 1, Conv, [128, 1, 1]]         # 11: C5 reduced → p5
 
   # Upsample p5 and concat with p4
-  - [12, 1, nn.Upsample, [None, 2, "nearest"]] # 13: upsample p5
-  - [[11, 13], 1, Concat, [1]]         # 14: concat p4 and upsampled p5
-  - [-1, 1, Conv, [128, 3, 1]]         # 15: fused p4
+  - [11, 1, nn.Upsample, [None, 2, "nearest"]] # 12: upsample p5
+  - [[10, 12], 1, Concat, [1]]         # 13: concat p4 and upsampled p5
+  - [-1, 1, Conv, [128, 3, 1]]         # 14: fused p4
 
   # Upsample fused p4 and concat with p3
-  - [15, 1, nn.Upsample, [None, 2, "nearest"]] # 16: upsample fused p4
-  - [[10, 16], 1, Concat, [1]]         # 17: concat p3 and upsampled p4
-  - [-1, 1, Conv, [128, 3, 1]]         # 18: fused p3
+  - [14, 1, nn.Upsample, [None, 2, "nearest"]] # 15: upsample fused p4
+  - [[9, 15], 1, Concat, [1]]         # 16: concat p3 and upsampled p4
+  - [-1, 1, Conv, [128, 3, 1]]         # 17: fused p3
 
   # Final Detect layer using p3 (40×40), p4 (20×20), p5 (10×10)
-  - [[18, 15, 12], 1, Detect, [nc]]    # 20: detect heads on P3, P4, P5
+  - [[17, 14, 11], 1, Detect, [nc]]    # 18: detect heads on P3, P4, P5
