--- a/ultralytics/cfg/models/v8/butterfly.yaml
+++ b/ultralytics/cfg/models/v8/butterfly.yaml
@@ -32,18 +32,18 @@ head :
   - [-1, 1, Conv, [128, 3, 1]]                     # 19: out_left (for head 1)
 
   # ===== Right Stem =====
-  - [3, 1, SE, [64]]                   # 20: C3 -> Attention B
-  - [-1, 1, Conv, [128, 1, 1]]         # 21: P3_right
-  - [7, 1, SE, [256]]                  # 22: C1 -> Attention B
-  - [-1, 1, Conv, [128, 1, 1]]         # 23: P1_right
-  - [10, 1, SE, [1024]]                # 24: C2 -> Attention B
-  - [-1, 1, Conv, [128, 1, 1]]         # 25: P2_right
+  - [3, 1, Conv, [128, 1, 1]]         # 20: C3 -> conv
+  - [-1, 1, SE, [128]]                # 21: attension -> P3_right
+  - [7, 1, Conv, [128, 1, 1]]         # 22: C1 -> conv
+  - [-1, 1, SE, [128]]                # 23: atttension -> P1_right
+  - [10, 1,Conv, [128, 1, 1]]         # 24: C2 -> conv
+  - [-1, 1, SE, [128]]                # 25: attension -> P2_right
 
   - [25, 1, nn.Upsample, [None, 2, "nearest"]]     # 26: upsample P2_right
-  - [[26, 22], 1, Concat, [1]]                     # 27: P3_right + up_P2_right
+  - [[26, 23], 1, Concat, [1]]                     # 27: P3_right + up_P2_right
   - [-1, 1, Conv, [128, 3, 1]]                     # 28: Fused_right_P3
   - [28, 1, nn.Upsample, [None, 2, "nearest"]]     # 29: upsample fused right
-  - [[29, 20], 1, Concat, [1]]                     # 30: P1_right + up_P3_right
+  - [[29, 21], 1, Concat, [1]]                     # 30: P1_right + up_P3_right
   - [-1, 1, Conv, [128, 3, 1]]                     # 31: out_right (for head 1)
 
   # ===== Fusion for other heads =====
