--- a/ultralytics/cfg/models/v8/butterfly.yaml
+++ b/ultralytics/cfg/models/v8/butterfly.yaml
@@ -8,11 +8,11 @@ backbone:
   - [-1, 1, DenseBlock, [64, 3, 16]]    # 2: 160 -> 160 , 64
   - [-1, 1, CBAM, [64]]                 # 3: 160 -> 160, 64, C3
   - [-1, 1, DWSConv, [128, 3, 2]]       # 4: 160 -> 80, 128
-  - [-1, 1, CondConv, [256, 3, 2]]      # 5: 80 -> 40, 256
+  - [-1, 1, DWSConv, [256, 3, 2]]      # 5: 80 -> 40, 256
   - [-1, 1, DenseBlock, [256, 4, 24]]   # 6: 40 -> 40 , 256
   - [-1, 1, CBAM, [256]]                # 7: 40 -> 40, 256, C4
   - [-1, 1, DWSConv, [512, 3, 2]]       # 8: 40 -> 20, 512
-  - [-1, 1, CondConv, [1024, 3, 2]]     # 9: 20 -> 10, 1024
+  - [-1, 1, DWSConv, [1024, 3, 2]]       # 9: 20 -> 10, 1024
   - [-1, 1, CBAM, [1024]]               # 10: 10 -> 10, 1024, C5
 
 # ----------------------
