--- a/ultralytics/cfg/models/v8/butterfly_mix.yaml
+++ b/ultralytics/cfg/models/v8/butterfly_mix.yaml
@@ -6,13 +6,13 @@ backbone:
   - [-1, 1, DWSConv, [32, 3, 2]]        # 0: stem (640 -> 320) , 32
   - [-1, 1, DWSConv, [64, 3, 2]]        # 1: 320 -> 160 , 64
   - [-1, 1, DWSConv, [128, 3, 2]]       # 2: 160 -> 80 , 128
-  - [-1, 1, SwinFusionBlock, [128]]                 # 3: 80 -> 80, 128, C3
+  - [-1, 1, C2f, [128, True]]                 # 3: 80 -> 80, 128, C3
   - [-1, 1, DenseBlock, [128, 3, 16]]   # 4: 80 -> 80, 128
   - [-1, 1, DWSConv, [256, 3, 2]]        # 5: 80 -> 40, 256
-  - [-1, 1, SwinFusionBlock, [256]]                 # 6: 40 -> 40 , 256 , C4
+  - [-1, 1, C2f, [256, True]]                 # 6: 40 -> 40 , 256 , C4
   - [-1, 1, DenseBlock, [256, 3, 16]]    # 7: 40 -> 40, 256, 
   - [-1, 1, DWSConv, [512, 3, 1]]       # 8: 40 -> 20, 512             
-  - [-1, 1, SwinFusionBlock, [512]]                 # 9: 10 -> 20, 512, C5
+  - [-1, 1, C2f, [512, True]]                 # 9: 10 -> 20, 512, C5
 
 # ----------------------
 # Neck + Head (Standard FPN)
@@ -29,11 +29,11 @@ head :
     # ===== Left Stem ====
   - [13, 1, DWSConv, [256, 3, 2]]                  # 15: 80 -> 40, 256
   - [[15, 6], 1, Concat, [1]]                      # 16: concat , 40x40x512
-  - [16, 1, SwinFusionBlock, [512]]                            # 17:  40 -> 40 , 512 , P4
+  - [16, 1, C2f, [512]]                            # 17:  40 -> 40 , 512 , P4
   - [14, 1, DWSConv, [512, 3, 2]]                  # 18: 40 -> 20, 512
   - [[18, 9], 1, Concat, [1]]                     # 19: concat , 20x20x1024
   - [13, 1, Conv, [512, 3, 1]]                     # 20: conv 1x1  
-  - [16, 1, SwinFusionBlock, [512]]                          # 21:  40 -> 40 , 512 , P5
+  - [16, 1, C2f, [512]]                          # 21:  40 -> 40 , 512 , P5
  
   # ===== Detect Layer =====
   - [[21, 17, 14], 1, Detect, [nc]]    # 22: Final detect
